--- a/src/main/resources/props/config.properties
+++ b/src/main/resources/props/config.properties
@@ -4,3 +4,11 @@
 #fcm.json.path=egovframework/fcm/json/
 #fcm.json.file=doolleeholy-28d10-firebase-adminsdk-qetap-63c3306239.json
 #fcm.json.file=doollee-6607b-firebase-adminsdk-x63fp-c8ed3cb13d.json
+
+
+#-- MAIL Conn. Info.--#
+EMAIL.HOST=smtp.mailplug.co.kr
+EMAIL.PORT=465
+EMAIL.PROTOCOL=smtp
+EMAIL.FROM=dev@doollee.co.kr
+EMAIL.PASSWORD=skEnffl!2#4
