--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,11 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>4.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
