--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -78,5 +78,8 @@
 		<error-code>500</error-code>
 		<location>/common/error.jsp</location>
 	</error-page>
-    
+
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
 </web-app>
