--- a/src/main/resources/props/config.properties
+++ b/src/main/resources/props/config.properties
@@ -15,3 +15,6 @@ EMAIL.PASSWORD=skEnffl!2#4
 
 #--TELEGRAM Info--#
 TELEGRAM.TOKEN=6497537036:AAF80uVIrxjabEXsV10HyfAXGzUPFLmeezE
+
+#--IMAGE UPLOAD PATH--#
+UPLOAD.PATH=/opt/apache-tomcat-8.5.32/webapps/upload/
