--- a/src/main/resources/props/config.properties
+++ b/src/main/resources/props/config.properties
@@ -18,3 +18,4 @@ TELEGRAM.TOKEN=6497537036:AAF80uVIrxjabEXsV10HyfAXGzUPFLmeezE
 
 #--IMAGE UPLOAD PATH--#
 UPLOAD.PATH=/opt/apache-tomcat-8.5.32/webapps/upload/
+UPLOAD.NAS_PATH=/web/rrs_webapps/upload/
