이메일 전송관련 수정

--- a/src/main/resources/props/config.properties
+++ b/src/main/resources/props/config.properties
@@ -7,11 +7,14 @@
 
 
 #-- MAIL Conn. Info.--#
-EMAIL.HOST=smtp.mailplug.co.kr
+#EMAIL.HOST=smtp.mailplug.co.kr
+EMAIL.HOST=smtp.naver.com
 EMAIL.PORT=465
 EMAIL.PROTOCOL=smtp
-EMAIL.FROM=dev@doollee.co.kr
-EMAIL.PASSWORD=skEnffl!2#4
+#EMAIL.FROM=dev@doollee.co.kr
+#EMAIL.PASSWORD=skEnffl!2#4
+EMAIL.FROM=wkim94@naver.com
+EMAIL.PASSWORD=wkim0910@@
 
 #--TELEGRAM Info--#
 TELEGRAM.TOKEN=6890326715:AAG6LFGAVPKe-4dten4FIXWhzXMMQG1BA50
