--- a/src/main/resources/props/config.properties
+++ b/src/main/resources/props/config.properties
@@ -17,7 +17,8 @@ EMAIL.FROM=wkim94@naver.com
 EMAIL.PASSWORD=wkim0910@@
 
 #--TELEGRAM Info--#
-TELEGRAM.TOKEN=6890326715:AAG6LFGAVPKe-4dten4FIXWhzXMMQG1BA50
+#TELEGRAM.TOKEN=6890326715:AAG6LFGAVPKe-4dten4FIXWhzXMMQG1BA50
+TELEGRAM.TOKEN=6476392268:AAGFnBzs-uZSo7GQpP6Q_IyUEJUEdhw28t4               
 
 #--IMAGE UPLOAD PATH--#
 UPLOAD.PATH=/opt/apache-tomcat-8.5.32/webapps/upload/
