--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,17 @@
 		<filter-name>MultipartFilter</filter-name>
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
+	
+	<filter> 
+	    <filter-name>PreDispatchFilter</filter-name> 
+	    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
+	 </filter>
+	  	  
+	 <filter-mapping> 
+	    <filter-name>PreDispatchFilter</filter-name> 
+		<url-pattern>/*</url-pattern>		
+	 </filter-mapping> 
+	 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath*:egovframework/spring/context-*.xml</param-value>
@@ -56,7 +67,7 @@
 		<servlet-name>action</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-
+	
  	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
@@ -80,8 +91,5 @@
 
 	<session-config>
 		<session-timeout>20</session-timeout>
-		<cookie-config>
-			<name>RRSCLIENTSESSION</name>
-		</cookie-config>
 	</session-config>
 </web-app>
