--- a/src/main/resources/props/config.properties
+++ b/src/main/resources/props/config.properties
@@ -10,8 +10,8 @@
 EMAIL.HOST=smtp.naver.com
 EMAIL.PORT=465
 EMAIL.PROTOCOL=smtp
-EMAIL.FROM=wkim94@naver.com
-EMAIL.PASSWORD=wkim0910@@
+EMAIL.FROM=palmresort@naver.com
+EMAIL.PASSWORD=JohorMal1379!
 
 #--TELEGRAM Info--#
 #TELEGRAM.TOKEN=6890326715:AAG6LFGAVPKe-4dten4FIXWhzXMMQG1BA50
